content/boundary/v1.0.x/content/docs/targets/create/tcp/index.mdx
---
layout: docs
page_title: Overview
description: >-
  Learn how to configure generic TCP targets. Review common examples of TCP targets, like kubernetes, postgres, mysql, and web targets.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-01-23T14:04:39-07:00
last_modified: 2026-02-03T13:20:53-07:00
# END AUTO GENERATED METADATA
---

# TCP targets

[TCP targets](/boundary/docs/domain-model/targets) represent generic networked services with an associated set of permissions that end users can connect to.

@include 'configuration-reference/enterprise-features/tcp-target-limitations.mdx'

You can use a TCP target for any connection with Boundary. This page describes how to configure a generic TCP target type in Boundary.

Refer to the following pages for examples of common configurations for TCP targets:

- Databases
  - [MySQL](/boundary/docs/targets/create/tcp/mysql)
  - [PostgreSQL](/boundary/docs/targets/create/tcp/postgres)
- [Kubernetes clusters](/boundary/docs/targets/create/tcp/kubernetes)
- [Web targets](/boundary/docs/targets/create/tcp/web)
- [SSH](/boundary/docs/targets/create/tcp/ssh) (without session recording)
- [RDP](/boundary/docs/targets/create/tcp/rdp) (without session recording)

You can configure any networked service available with an address and port as a TCP target. Boundary must have access to the target to start a session. If your service is not publicly available, you will need to [deploy a worker](/boundary/docs/deploy/self-managed/deploy-workers) to give Boundary access to the target network.

## Create a TCP target

The following examples use a direct target address for simplicity, but HashiCorp recommends that you [configure host catalogs and host sets](/boundary/docs/hosts/create-static-host-catalog) for scaled production deployments.

Complete the following steps to create a TCP target.

<Tabs>
<Tab heading="Admin Console" group="admin">

1. Log in to Boundary.
1. Select an org, and then select the project where you want to create a target.
1. Select **Targets** under **Project Actions**.
1. Click **New Target**.
1. Complete the following fields:
   - **Name**: (Required) A name for identification purposes, such as `tcp-target`.
   The name must be unique.
   - **Description**: (Optional) An optional description of the target for identification purposes.
   - **Type**: (Required) Select **TCP** to create a TCP target.
   - **Target Address** (Optional) If you are not using host catalogs and host sets, you can enter a target address instead to map the target to a single address.
   This must be a valid IP address or DNS name.
   - **Default Port** (Required) The default port on which to connect, such as `22` for an SSH connection.
   - **Aliases** (Optional) A unique identifier for the target, which makes the target easier to connect to using the CLI or transparent sessions. To create an alias, complete the following fields, and then click **Add**:
      - **Select scope**: Select the scope in which to create the alias. You must create org and project suffixes before you can create an alias in the target's project scope. Otherwise, you can only create the alias in the `global` scope. Refer to [Create a suffix for a scope](/boundary/docs/targets/configuration/create-suffix) for more information.
      - **Alias value**: Enter the string that you want to use as the alias to represent the target. An alias's value can be a hostname or a DNS-like string.
1. Click **Save**.

</Tab>
<Tab heading="CLI" group="cli">

1. Log in to Boundary.
1. Set the `BOUNDARY_PROJECT_ID` environment variable, or provide the scope ID (such as `p_1234567890`) in the next step.
1. Use the following command to create a TCP target named `tcp-target` with a direct target address of `10.0.0.10` and a default connection port of `99`:

   ```shell-session
   $ boundary targets create tcp \
     -scope-id $BOUNDARY_PROJECT_ID \
     -name "tcp-target" \
     -address "10.0.0.10" \
     -default-port 99
   ```

  You must provide the `scope-id` field when you create a static host catalog.

  You can use any of the following attributes when you create a TCP target:

  @include 'targets/targets-create.mdx'

  @include 'targets/targets-create-tcp.mdx'

</Tab>
<Tab heading="Terraform" group="terraform">

You can define a target and target alias using the [Boundary Terraform provider](https://registry.terraform.io/providers/hashicorp/boundary/latest):

```hcl
resource "boundary_target" "tcp_target" {
  name         = "tcp-test"
  description  = "Generic TCP target for testing"
  type         = "tcp"
  address      = "10.0.0.10"
  default_port = "99"
  scope_id     = boundary_scope.project.id
}
```

</Tab>
</Tabs>

## Configure a brokered application credential

@include 'configuration-reference/credentials/configure-brokered-credentials.mdx'

@include 'configuration-reference/enterprise-features/tcp-target-no-injection.mdx'

You can configure credentials for the TCP target using:

- Static credentials (`username_password`, `ssh_private_key`, or `username_password_domain`)
- Vault credential library (username/password or username/private key)
- An SSH certificate from a Vault SSH credential library

Refer to the [Configure targets with credential brokering](/boundary/docs/credentials/configure-credential-brokering) page to learn how to configure a target with credential brokering.

## Next steps

To use target aliases to connect to targets:

1. [Create an alias suffix for a scope](/boundary/docs/targets/configuration/create-suffix) if you intend to create aliases in a project scope.
1. [Create a target alias](/boundary/docs/targets/configuration/create-target-alias)
1. [Connect to a target using an alias](/boundary/docs/targets/connections/connect-target-alias)

## More information

- To learn how to connect to a target, refer to [Connection workflows](/boundary/docs/targets/connections).
- To learn more about target aliases, refer to [Aliases](/boundary/docs/targets/configuration).
